# MovieMind-UI

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: __init__.py  main.py
app/static/: app.js  index.html  styles.css
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx  styles.css  types.ts
frontend/src/api/: errors.ts  session.ts
frontend/src/components/: AppLayout.tsx  AuthScreen.tsx  BootScreen.tsx  FilterPanel.tsx  MovieCard.tsx  MovieDialog.tsx  MoviesPage.tsx  Pagination.tsx  Poster.tsx  SearchHero.tsx
frontend/src/contexts/: AuthContext.tsx  LibraryContext.tsx  ToastContext.tsx
frontend/src/data/: genres.ts
frontend/src/pages/: CatalogPage.tsx  FavoritesPage.tsx
frontend/src/test/: setup.ts
tests/: test_app.py
